rename subworkflow to match nf-core standards

--- a/conf/quilt_subworkflow.config
+++ b/conf/quilt_subworkflow.config
@@ -89,14 +89,14 @@ process {
         ]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCATENATE_VCF:BCFTOOLS_INDEX' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCATENATE_BCFTOOLS:BCFTOOLS_INDEX' {
         ext.args     = {[
                         "--tbi",
                         ].join(" ").trim()}
     }
 
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCATENATE_VCF:BCFTOOLS_CONCAT' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCATENATE_BCFTOOLS:BCFTOOLS_CONCAT' {
         ext.args = {[
             "--ligate",
             "--output-type z",
