Update validation process to allow vcf and direct input

--- a/conf/test_all.config
+++ b/conf/test_all.config
@@ -26,5 +26,10 @@ params {
 
     // Genome references
     fasta  = "https://raw.githubusercontent.com/nf-core/test-datasets/phaseimpute/data/reference_genome/21_22/hs38DH.chr21_22.fa"
-    step   = "simulate"
+    panel  = "${projectDir}/tests/csv/panel.csv"
+    phased = true
+    map    = "${projectDir}/tests/csv/map.csv"
+
+    step   = "all"
+    tools  = "glimpse1"
 }
