--- a/conf/test_validate.config
+++ b/conf/test_validate.config
@@ -20,9 +20,9 @@ params {
     max_time   = '6.h'
 
     // Input data
-    input                = "${projectDir}/tests/csv/sample_sim.csv"
+    input                = "${projectDir}/tests/csv/sample_validate_imputed.csv"
+    input_truth          = "${projectDir}/tests/csv/sample_validate_truth.csv"
     input_region         = "${projectDir}/tests/csv/region.csv"
-    depth                = 1
 
     // Genome references
     fasta  = "https://raw.githubusercontent.com/nf-core/test-datasets/phaseimpute/data/reference_genome/21_22/hs38DH.chr21_22.fa"
