--- a/nextflow.config
+++ b/nextflow.config
@@ -43,6 +43,7 @@ params {
     genotype                    = null
 
     // Validation
+    input_truth                 = null
     bins                        = "0 0.01 0.05 0.1 0.2 0.5"
     min_val_gl                  = 0.9
     min_val_dp                  = 5
