improve outputs from chunks

--- a/conf/quilt_subworkflow.config
+++ b/conf/quilt_subworkflow.config
@@ -21,11 +21,16 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:MAKE_CHUNKS:GLIMPSE_CHUNK' {
+
+        ext.prefix = { "${meta.id}_${meta.chr}" }
+
         publishDir = [
             [
-                path: { "${params.outdir}/quilt_impute/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
+                path: { "${params.outdir}/quilt_impute/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}_chunk" },
                 mode: params.publish_dir_mode,
             ],
+
+
         ]
     }
 
