Update vcf_concordance_glimpse2 tests

--- a/subworkflows/local/vcf_concordance_glimpse2/tests/nextflow.config
+++ b/subworkflows/local/vcf_concordance_glimpse2/tests/nextflow.config
@@ -1,3 +1,12 @@
 params {
     max_memory = '7.GB'
+    withName: CONCATENATE {
+        ext.suffix = "txt"
+    }
+    withName: GAWK {
+        ext.suffix = "txt"
+    }
+    withName: 'VCF_CONCORDANCE_GLIMPSE2:CONCATENATE' {
+        ext.suffix = "txt"
+    }
 }
