Update config for all steps to spearate results files in corresponding folders

--- a/conf/steps/imputation.config
+++ b/conf/steps/imputation.config
@@ -12,9 +12,9 @@
 
 process {
     // Configuration for the glimpse1 imputation subworkflow
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_INPUT:BCFTOOLS_MPILEUP' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_INPUT:.*' {
         publishDir = [
-            path: { "${params.outdir}/imputation/glimpse1" },
+            path: { "${params.outdir}/imputation/glimpse1/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
             mode: params.publish_dir_mode
         ]
         ext.args = [
@@ -30,10 +30,11 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:*' {
         publishDir = [
-            path: { "${params.outdir}/imputation/glimpse1" },
+            path: { "${params.outdir}/imputation/glimpse1/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
             mode: params.publish_dir_mode
         ]
     }
+
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:GLIMPSE_CHUNK' {
         ext.args = [
             "--window-size 200000",
