--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -11,11 +11,14 @@
 */
 
 process {
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHR_CHECK:VCF_CHR_RENAME:BCFTOOLS_ANNOTATE' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHR_CHECK:.*' {
         publishDir = [
-            path: { "${params.outdir}/prep_panel" },
+            path: { "${params.outdir}/prep_panel/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
             mode: params.publish_dir_mode
         ]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHR_CHECK:VCF_CHR_RENAME:BCFTOOLS_ANNOTATE' {
         ext.args = [
             "-Oz",
             "--no-version"
@@ -23,9 +26,9 @@ process {
         ext.prefix = { "${meta.id}_chrrename" }
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GET_PANEL:*' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GET_PANEL:.*' {
         publishDir = [
-            path: { "${params.outdir}/prep_panel" },
+            path: { "${params.outdir}/prep_panel/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
             mode: params.publish_dir_mode
         ]
     }
