--- a/conf/steps/simulation.config
+++ b/conf/steps/simulation.config
@@ -11,6 +11,20 @@
 */
 
 process {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION:.*' {
+        publishDir = [
+            path: { "${params.outdir}/simulation/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:.*' {
+        publishDir = [
+            path: { "${params.outdir}/simulation/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION:SAMTOOLS_VIEW' {
         ext.args = [
         ].join(' ')
