--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -13,6 +13,10 @@
 process {
     // Configuration for the validation step
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:BCFTOOLS_MPILEUP' {
+        publishDir = [
+            path: { "${params.outdir}/validation/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
+            mode: params.publish_dir_mode
+        ]
         ext.args = [
             "-I",
             "-E",
@@ -24,15 +28,19 @@ process {
         ].join(' ')
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:*' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:.*' {
         publishDir = [
-            path: { "${params.outdir}/validation" },
+            path: { "${params.outdir}/validation/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
             mode: params.publish_dir_mode
         ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:GLIMPSE2_CONCORDANCE' {
         ext.prefix = { "${meta.id}_D${meta.depth}_P${meta.panel}_R${meta.region.replace(':','_')}" }
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:CONCATENATE' {
+        ext.suffix = { "txt" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:ADD_COLUMNS' {
