--- a/nextflow.config
+++ b/nextflow.config
@@ -269,17 +269,20 @@ manifest {
 // Load modules.config for DSL2 module specific options
 includeConfig 'conf/modules.config'
 
+// initialisation step
+includeConfig 'conf/steps/initialisation.config'
+
 // simulation step
-includeConfig 'conf/modules/simulation.config'
+includeConfig 'conf/steps/simulation.config'
 
 // panel_prep step
-includeConfig 'conf/modules/panel_prep.config'
+includeConfig 'conf/steps/panel_prep.config'
 
 // imputation step
-includeConfig 'conf/modules/imputation.config'
+includeConfig 'conf/steps/imputation.config'
 
 // validation step
-includeConfig 'conf/modules/validation.config'
+includeConfig 'conf/steps/validation.config'
 
 // Function to ensure that resource requirements don't go beyond
 // a maximum limit
