--- a/subworkflows/local/vcf_concordance_glimpse2/tests/nextflow.config
+++ b/subworkflows/local/vcf_concordance_glimpse2/tests/nextflow.config
@@ -1,11 +1,8 @@
 params {
     max_memory = '7.GB'
-    withName: CONCATENATE {
-        ext.suffix = "txt"
-    }
-    withName: GAWK {
-        ext.suffix = "txt"
-    }
+}
+
+process {
     withName: 'VCF_CONCORDANCE_GLIMPSE2:CONCATENATE' {
         ext.suffix = "txt"
     }
