add subworkflows to modules

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -48,7 +48,7 @@ process {
     }
 
     // Panel preparation workflow
-    withName: VIEW_VCF_REGION {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_REGION:VIEW_VCF_REGION' {
         ext.args = [
             "--output-type z",
             "--no-version"
@@ -64,7 +64,7 @@ process {
         ext.prefix = { "${meta.id}_chrrename" }
     }
 
-    withName: VIEW_VCF_SNPS {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GET_PANEL:VIEW_VCF_SNPS' {
         ext.args = [
             "-m 2",
             "-M 2",
@@ -74,7 +74,7 @@ process {
         ].join(' ')
         ext.prefix = { "${meta.id}_SPNS" }
     }
-    withName: BCFTOOLS_NORM{
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GET_PANEL:BCFTOOLS_NORM' {
         ext.args = [
             "-m",
             "-any",
@@ -82,7 +82,7 @@ process {
         ].join(' ')
         ext.prefix = { "${meta.id}_norm" }
     }
-    withName: VIEW_VCF_SITES {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GET_PANEL:VIEW_VCF_SITES' {
         ext.args = [
             "-G",
             "-m 2",
@@ -93,13 +93,13 @@ process {
         ].join(' ')
         ext.prefix = { "${meta.id}_SITES" }
     }
-    withName: BCFTOOLS_QUERY {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GET_PANEL:BCFTOOLS_QUERY' {
         ext.args = [
             "-f'%CHROM\t%POS\t%REF,%ALT\n'",
         ].join(' ')
         ext.prefix = { "${meta.id}_SITES_TSV" }
     }
-    withName: TABIX_TABIX {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GET_PANEL:TABIX_TABIX' {
         ext.args = [
             "-s1",
             "-b2",
@@ -107,14 +107,14 @@ process {
         ].join(' ')
         ext.prefix = { "${meta.id}_SITES_TSV" }
     }
-    withName: BEDTOOLS_MAKEWINDOWS {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_PHASE_SHAPEIT5:BEDTOOLS_MAKEWINDOWS' {
         ext.args = [
             '-w 60000',
             '-s 40000'
         ].join(' ')
         ext.prefix = { "${meta.id}_chunks" }
     }
-    withName: BCFTOOLS_MPILEUP {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_INPUT:BCFTOOLS_MPILEUP' {
         ext.args = [
             "-I",
             "-E",
@@ -126,21 +126,21 @@ process {
         ].join(' ')
     }
 
-    withName: GLIMPSE_PHASE {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE:GLIMPSE_PHASE' {
         ext.args = [
             "--impute-reference-only-variants"
         ].join(' ')
         ext.prefix = { "${meta.id}" }
         ext.suffix = "bcf"
     }
-    withName: GLIMPSE_CHUNK {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE:GLIMPSE_CHUNK' {
         ext.args = [
             "--window-size 200000",
             "--buffer-size 20000"
         ].join(' ')
         ext.prefix = { "${meta.id}" }
     }
-    withName: GLIMPSE_LIGATE {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE:GLIMPSE_LIGATE' {
         ext.prefix = { "${meta.id}_D${meta.depth}_P${meta.panel}" }
     }
     withName: GLIMPSE_CONCORDANCE {
