--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -12,11 +12,13 @@
 
 process {
     // Configuration for the validation step
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:BCFTOOLS_MPILEUP' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:.*' {
         publishDir = [
             path: { "${params.outdir}/validation/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
             mode: params.publish_dir_mode
         ]
+    }
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:BCFTOOLS_MPILEUP' {
         ext.args = [
             "-I",
             "-E",
@@ -37,6 +39,7 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:GLIMPSE2_CONCORDANCE' {
         ext.prefix = { "${meta.id}_D${meta.depth}_P${meta.panel}_R${meta.region.replace(':','_')}" }
+        ext.args = "--out-r2-per-site"
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:CONCATENATE' {
