--- a/nextflow.config
+++ b/nextflow.config
@@ -199,6 +199,7 @@ profiles {
     test_full     { includeConfig 'conf/test_full.config' }
     test_sim      { includeConfig 'conf/test_sim.config'  }
     test_validate { includeConfig 'conf/test_validate.config' }
+    test_all      { includeConfig 'conf/test_all.config' }
 }
 
 // Set default registry for Apptainer, Docker, Podman and Singularity independent of -profile
