Disable unecessary output results

--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -14,7 +14,8 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHR_CHECK:.*' {
         publishDir = [
             path: { "${params.outdir}/prep_panel/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
-            mode: params.publish_dir_mode
+            mode: params.publish_dir_mode,
+            enabled: false
         ]
     }
 
@@ -29,7 +30,8 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GET_PANEL:.*' {
         publishDir = [
             path: { "${params.outdir}/prep_panel/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
-            mode: params.publish_dir_mode
+            mode: params.publish_dir_mode,
+            enabled: false
         ]
     }
 
@@ -81,11 +83,14 @@ process {
         ext.prefix = { "${meta.id}_SITES_TSV" }
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_PHASE_SHAPEIT5:BEDTOOLS_MAKEWINDOWS' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GET_PANEL:VCF_PHASE_SHAPEIT5:BEDTOOLS_MAKEWINDOWS' {
         ext.args = [
             '-w 60000',
             '-s 40000'
         ].join(' ')
         ext.prefix = { "${meta.id}_chunks" }
+        publishDir = [
+            enabled: false
+        ]
     }
 }
