Remove version.yml export Rename export files Fix versions export of BCFTOOLS_QUERY and VCFCHREXTRACT Add all versions to multiqc

--- a/conf/steps/imputation.config
+++ b/conf/steps/imputation.config
@@ -15,7 +15,9 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_INPUT:.*' {
         publishDir = [
             path: { "${params.outdir}/imputation/glimpse1/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
-            mode: params.publish_dir_mode
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            enabled: false
         ]
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_INPUT:BCFTOOLS_MPILEUP' {
@@ -28,12 +30,14 @@ process {
             "-Aim",
             "-C alleles"
         ].join(' ')
+        ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.call" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:.*' {
         publishDir = [
-            path: { "${params.outdir}/imputation/glimpse1/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
-            mode: params.publish_dir_mode
+            path: { "${params.outdir}/imputation/glimpse1/" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
 
@@ -42,18 +46,34 @@ process {
             "--window-size 200000",
             "--buffer-size 20000"
         ].join(' ')
-        ext.prefix = { "${meta.id}" }
+        ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.chunk" }
+        publishDir = [
+            enabled: false
+        ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:GLIMPSE_PHASE' {
         ext.args = [
             "--impute-reference-only-variants"
         ].join(' ')
-        ext.prefix = { "${meta.id}" }
+        ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.phase" }
         ext.suffix = "bcf"
+        publishDir = [
+            enabled: false
+        ]
+    }
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:INDEX_PHASE' {
+        publishDir = [
+            enabled: false
+        ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:GLIMPSE_LIGATE' {
-        ext.prefix = { "${meta.id}_D${meta.depth}_P${meta.panel}" }
+        ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.ligate" }
+    }
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:INDEX_LIGATE' {
+        publishDir = [
+            path: { "${params.outdir}/imputation/glimpse1/glimpse" }
+        ]
     }
 }
