--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -13,7 +13,7 @@
 process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHR_CHECK:.*' {
         publishDir = [
-            path: { "${params.outdir}/prep_panel/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
+            path: { "${params.outdir}/prep_panel/" },
             mode: params.publish_dir_mode,
             enabled: false
         ]
@@ -29,9 +29,10 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GET_PANEL:.*' {
         publishDir = [
-            path: { "${params.outdir}/prep_panel/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
+            path: { "${params.outdir}/prep_panel/" },
             mode: params.publish_dir_mode,
-            enabled: false
+            enabled: true,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
 
@@ -69,7 +70,7 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GET_PANEL:BCFTOOLS_QUERY' {
         ext.args = [
-            "-f'%CHROM\t%POS\t%REF,%ALT\n'",
+            "-f'%CHROM\t%POS\t%REF,%ALT\\n'",
         ].join(' ')
         ext.prefix = { "${meta.id}_SITES_TSV" }
     }
