--- a/conf/steps/simulation.config
+++ b/conf/steps/simulation.config
@@ -13,26 +13,32 @@
 process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION:.*' {
         publishDir = [
-            path: { "${params.outdir}/simulation/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
+            path: { "${params.outdir}/simulation/" },
             mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-        ]
-    }
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:.*' {
-        publishDir = [
-            path: { "${params.outdir}/simulation/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
-            mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            enabled: false
         ]
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION:SAMTOOLS_VIEW' {
         ext.args = [
         ].join(' ')
-        ext.prefix = { "${meta.id}_R${meta.region}" }
+        ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}" }
+    }
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:.*' {
+        publishDir = [
+            path: { "${params.outdir}/simulation/" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+        ]
+    }
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_COVERAGE' {
+        ext.args = [
+        ].join(' ')
+        ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.stats" }
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_VIEW' {
         ext.args = [
         ].join(' ')
-        ext.prefix = { "${meta.id}_D${meta.depth}" }
+        ext.prefix = { "${meta.id}_D${meta.depth}_R${meta.region.replace(':','_')}" }
     }
 }
