--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -14,8 +14,9 @@ process {
     // Configuration for the validation step
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:.*' {
         publishDir = [
-            path: { "${params.outdir}/validation/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
-            mode: params.publish_dir_mode
+            path: { "${params.outdir}/validation/truth" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:BCFTOOLS_MPILEUP' {
@@ -28,25 +29,39 @@ process {
             "-Aim",
             "-C alleles"
         ].join(' ')
+        ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}_truth.call" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:.*' {
         publishDir = [
-            path: { "${params.outdir}/validation/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
-            mode: params.publish_dir_mode
+            path: { "${params.outdir}/validation/" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:GLIMPSE2_CONCORDANCE' {
-        ext.prefix = { "${meta.id}_D${meta.depth}_P${meta.panel}_R${meta.region.replace(':','_')}" }
+        ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.concordance" }
         ext.args = "--out-r2-per-site"
+        publishDir = [
+            enabled: false
+        ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:CONCATENATE' {
         ext.suffix = { "txt" }
     }
 
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:GUNZIP' {
+        publishDir = [
+            enabled: false
+        ]
+    }
+
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:ADD_COLUMNS' {
         ext.prefix = { "${meta.id}_D${meta.depth}_P${meta.panel}_R${meta.region.replace(':','_')}_SNP" }
+        publishDir = [
+            enabled: false
+        ]
     }
 }
