remove unused elements

--- a/nf-test.config
+++ b/nf-test.config
@@ -9,5 +9,5 @@ config {
     configFile "tests/config/nf-test.config"
 
     // run all test with the defined docker profile from the main nextflow.config
-    profile "singularity"
+    profile ""
 }
