--- a/conf/quilt_subworkflow.config
+++ b/conf/quilt_subworkflow.config
@@ -94,7 +94,7 @@ process {
         ]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCATENATE_BCFTOOLS:BCFTOOLS_INDEX' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:IMPUTE_QUILT:BCFTOOLS_INDEX' {
         ext.args     = {[
                         "--tbi",
                         ].join(" ").trim()}
