index concat files

--- a/conf/quilt_subworkflow.config
+++ b/conf/quilt_subworkflow.config
@@ -119,4 +119,17 @@ process {
         ]
     }
 
+        withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCATENATE_BCFTOOLS:BCFTOOLS_INDEX' {
+        ext.args     = {[
+                        "--tbi",
+                        ].join(" ").trim()}
+
+        publishDir = [
+            [
+                path: { "${params.outdir}/quilt_impute/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}/concat" },
+                mode: params.publish_dir_mode,
+            ],
+        ]
+    }
+
 }
