--- a/conf/steps/imputation.config
+++ b/conf/steps/imputation.config
@@ -73,7 +73,7 @@ process {
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:INDEX_LIGATE' {
         publishDir = [
-            path: { "${params.outdir}/imputation/glimpse1/glimpse" }
+            path: { "${params.outdir}/imputation/glimpse1" }
         ]
     }
 }
