--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -53,7 +53,7 @@ process {
             "--output-type z",
             "--no-version"
         ].join(' ')
-        ext.prefix = { "${meta.id}_SPNS" }
+        ext.prefix = { "${meta.id}_SNPS" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GET_PANEL:VIEW_VCF_SITES' {
