--- a/conf/steps/imputation_quilt.config
+++ b/conf/steps/imputation_quilt.config
@@ -26,7 +26,7 @@ process {
 
         publishDir = [
             [
-                path: { "${params.outdir}/quilt_impute/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}_chunk" },
+                path: { "${params.outdir}/imputation/quilt/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}_chunk" },
                 mode: params.publish_dir_mode,
             ],
 
@@ -88,7 +88,7 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:IMPUTE_QUILT:QUILT_QUILT' {
         publishDir = [
             [
-                path: { "${params.outdir}/quilt_impute/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
+                path: { "${params.outdir}/imputation/quilt/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
                 mode: params.publish_dir_mode,
             ],
         ]
@@ -98,38 +98,6 @@ process {
         ext.args     = {[
                         "--tbi",
                         ].join(" ").trim()}
-    }
-
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCATENATE_BCFTOOLS:BCFTOOLS_CONCAT' {
-        ext.args = {[
-            "--ligate",
-            "--output-type z",
-        ].join(" ").trim()}
-
-        cpus = 2
-        memory = 1.GB
-        maxRetries    = 2
-
-        publishDir = [
-            [
-                path: { "${params.outdir}/quilt_impute/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}/concat" },
-                mode: params.publish_dir_mode,
-            ],
-        ]
-    }
-
-        withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCATENATE_BCFTOOLS:BCFTOOLS_INDEX' {
-        ext.args     = {[
-                        "--tbi",
-                        ].join(" ").trim()}
-
-        publishDir = [
-            [
-                path: { "${params.outdir}/quilt_impute/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}/concat" },
-                mode: params.publish_dir_mode,
-            ],
-        ]
     }
 
 }
