--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -65,7 +65,7 @@ process {
             "--output-type z",
             "--no-version"
         ].join(' ')
-        ext.prefix = { "${meta.id}_SITES" }
+        ext.prefix = { "${meta.id}_C${meta.chr}_SITES" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GET_PANEL:BCFTOOLS_QUERY' {
@@ -93,5 +93,25 @@ process {
         publishDir = [
             enabled: false
         ]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_PANEL:.*' {
+        publishDir = [
+            path: { "${params.outdir}/prep_panel/concat" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+        ext.prefix = { "${meta.id}_sites_concat" }
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_PANEL:BCFTOOLS_CONCAT' {
+        ext.args = {[
+            "--ligate",
+            "--output-type z",
+        ].join(" ").trim()}
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_PANEL:BCFTOOLS_INDEX' {
+        ext.args     = "--tbi"
     }
 }
