--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -32,6 +32,26 @@ process {
         ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}_truth.call" }
     }
 
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_TRUTH:.*' {
+        publishDir = [
+            path: { "${params.outdir}/validation/concat" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+        ext.prefix = { "${meta.id}_truth_concat" }
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_TRUTH:BCFTOOLS_CONCAT' {
+        ext.args = {[
+            "--ligate",
+            "--output-type z",
+        ].join(" ").trim()}
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_TRUTH:BCFTOOLS_INDEX' {
+        ext.args     = "--tbi"
+    }
+
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:.*' {
         publishDir = [
             path: { "${params.outdir}/validation/" },
@@ -41,7 +61,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:GLIMPSE2_CONCORDANCE' {
-        ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.concordance" }
+        ext.prefix = { "${meta.id}.concordance" }
         ext.args = "--out-r2-per-site"
         publishDir = [
             enabled: false
@@ -59,7 +79,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:ADD_COLUMNS' {
-        ext.prefix = { "${meta.id}_D${meta.depth}_P${meta.panel}_R${meta.region.replace(':','_')}_SNP" }
+        ext.prefix = { "${meta.id}_D${meta.depth}_P${meta.panel}_SNP" }
         publishDir = [
             enabled: false
         ]
