--- a/conf/steps/imputation.config
+++ b/conf/steps/imputation.config
@@ -11,69 +11,23 @@
 */
 
 process {
-    // Configuration for the glimpse1 imputation subworkflow
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_INPUT:.*' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_IMPUT:.*' {
         publishDir = [
-            path: { "${params.outdir}/imputation/glimpse1/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
-            mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            enabled: false
-        ]
-    }
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_INPUT:BCFTOOLS_MPILEUP' {
-        ext.args = [
-            "-I",
-            "-E",
-            "-a 'FORMAT/DP'"
-        ].join(' ')
-        ext.args2 = [
-            "-Aim",
-            "-C alleles"
-        ].join(' ')
-        ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.call" }
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:.*' {
-        publishDir = [
-            path: { "${params.outdir}/imputation/glimpse1/" },
+            path: { "${params.outdir}/impute/concat" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
+        ext.prefix = { "${meta.id}_impute_concat" }
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:GLIMPSE_CHUNK' {
-        ext.args = [
-            "--window-size 200000",
-            "--buffer-size 20000"
-        ].join(' ')
-        ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.chunk" }
-        publishDir = [
-            enabled: false
-        ]
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_IMPUT:BCFTOOLS_CONCAT' {
+        ext.args = {[
+            "--ligate",
+            "--output-type z",
+        ].join(" ").trim()}
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:GLIMPSE_PHASE' {
-        ext.args = [
-            "--impute-reference-only-variants"
-        ].join(' ')
-        ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.phase" }
-        ext.suffix = "bcf"
-        publishDir = [
-            enabled: false
-        ]
-    }
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:INDEX_PHASE' {
-        publishDir = [
-            enabled: false
-        ]
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:GLIMPSE_LIGATE' {
-        ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.ligate" }
-    }
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:INDEX_LIGATE' {
-        publishDir = [
-            path: { "${params.outdir}/imputation/glimpse1" }
-        ]
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_IMPUT:BCFTOOLS_INDEX' {
+        ext.args     = "--tbi"
     }
 }
