--- a/nextflow.config
+++ b/nextflow.config
@@ -274,7 +274,6 @@ manifest {
 
 // Load modules.config for DSL2 module specific options
 includeConfig 'conf/modules.config'
-includeConfig 'conf/quilt_subworkflow.config'
 
 // initialisation step
 includeConfig 'conf/steps/initialisation.config'
@@ -287,6 +286,8 @@ includeConfig 'conf/steps/panel_prep.config'
 
 // imputation step
 includeConfig 'conf/steps/imputation.config'
+includeConfig 'conf/steps/imputation_glimpse1.config'
+includeConfig 'conf/steps/imputation_quilt.config'
 
 // validation step
 includeConfig 'conf/steps/validation.config'
