Add annotation to genotype likelihood to set-id

--- a/conf/steps/imputation_glimpse1.config
+++ b/conf/steps/imputation_glimpse1.config
@@ -33,6 +33,15 @@ process {
         ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.call" }
     }
 
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_INPUT:BCFTOOLS_ANNOTATE' {
+        ext.args     = "--set-id '%CHROM:%POS:%REF:%ALT' -Oz"
+        ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.annotate" }
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_INPUT:BCFTOOLS_INDEX' {
+        ext.args     = "--tbi"
+    }
+
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:.*' {
         publishDir = [
             path: { "${params.outdir}/imputation/glimpse1/" },
