--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -32,6 +32,15 @@ process {
         ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}_truth.call" }
     }
 
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:BCFTOOLS_ANNOTATE' {
+        ext.args     = "--set-id '%CHROM:%POS:%REF:%ALT' -Oz"
+        ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.annotate" }
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:BCFTOOLS_INDEX' {
+        ext.args     = "--tbi"
+    }
+
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_TRUTH:.*' {
         publishDir = [
             path: { "${params.outdir}/validation/concat" },
