Add annotation to quilt to set varians id

--- a/conf/steps/imputation_quilt.config
+++ b/conf/steps/imputation_quilt.config
@@ -86,6 +86,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:IMPUTE_QUILT:QUILT_QUILT' {
+        ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.impute" }
         publishDir = [
             [
                 path: { "${params.outdir}/imputation/quilt/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
@@ -94,10 +95,17 @@ process {
         ]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:IMPUTE_QUILT:BCFTOOLS_INDEX' {
-        ext.args     = {[
-                        "--tbi",
-                        ].join(" ").trim()}
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:IMPUTE_QUILT:INDEX1' {
+        ext.args     = "--tbi"
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:IMPUTE_QUILT:BCFTOOLS_ANNOTATE' {
+        ext.args     = "--set-id '%CHROM:%POS:%REF:%ALT' -Oz"
+        ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.impute.annotate" }
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:IMPUTE_QUILT:INDEX2' {
+        ext.args     = "--tbi"
     }
 
 }
