Update result directory configuration

--- a/conf/steps/imputation.config
+++ b/conf/steps/imputation.config
@@ -13,7 +13,7 @@
 process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_IMPUT:.*' {
         publishDir = [
-            path: { "${params.outdir}/impute/concat" },
+            path: { "${params.outdir}/imputation/concat" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
