--- a/conf/steps/imputation_glimpse1.config
+++ b/conf/steps/imputation_glimpse1.config
@@ -56,9 +56,7 @@ process {
             "--buffer-size 20000"
         ].join(' ')
         ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.chunk" }
-        publishDir = [
-            enabled: false
-        ]
+        publishDir = [ enabled: false ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:GLIMPSE_PHASE' {
@@ -67,19 +65,17 @@ process {
         ].join(' ')
         ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.phase" }
         ext.suffix = "bcf"
-        publishDir = [
-            enabled: false
-        ]
+        publishDir = [ enabled: false ]
     }
+
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:INDEX_PHASE' {
-        publishDir = [
-            enabled: false
-        ]
+        publishDir = [ enabled: false ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:GLIMPSE_LIGATE' {
         ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.ligate" }
     }
+
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:INDEX_LIGATE' {
         publishDir = [
             path: { "${params.outdir}/imputation/glimpse1" }
