--- a/conf/steps/imputation_quilt.config
+++ b/conf/steps/imputation_quilt.config
@@ -20,7 +20,7 @@ process {
         ]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:MAKE_CHUNKS:GLIMPSE_CHUNK' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:MAKE_CHUNKS:.*' {
 
         ext.prefix = { "${meta.id}_${meta.chr}" }
 
@@ -28,10 +28,15 @@ process {
             [
                 path: { "${params.outdir}/imputation/quilt/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}_chunk" },
                 mode: params.publish_dir_mode,
+                enabled: false
             ],
 
 
         ]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:MAKE_CHUNKS:GLIMPSE_CHUNK' {
+        ext.prefix = { "${meta.id}_${meta.chr}" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:MAKE_CHUNKS:BCFTOOLS_INDEX' {
@@ -76,10 +81,12 @@ process {
         cpus          = 2
         memory        = 400.MB
         maxRetries    = 2
+    }
 
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:IMPUTE_QUILT:.*' {
         publishDir = [
             [
-                path: { "${params.outdir}/quilt_impute/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}/convert" },
+                path: { "${params.outdir}/imputation/quilt/" },
                 mode: params.publish_dir_mode,
             ],
         ]
@@ -87,16 +94,12 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:IMPUTE_QUILT:QUILT_QUILT' {
         ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.impute" }
-        publishDir = [
-            [
-                path: { "${params.outdir}/imputation/quilt/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
-                mode: params.publish_dir_mode,
-            ],
-        ]
+        publishDir = [enabled: false]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:IMPUTE_QUILT:INDEX1' {
         ext.args     = "--tbi"
+        publishDir = [enabled: false]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:IMPUTE_QUILT:BCFTOOLS_ANNOTATE' {
