--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -17,6 +17,7 @@ process {
             path: { "${params.outdir}/validation/truth" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            enabled: false
         ]
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:BCFTOOLS_MPILEUP' {
@@ -72,9 +73,7 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:GLIMPSE2_CONCORDANCE' {
         ext.prefix = { "${meta.id}.concordance" }
         ext.args = "--out-r2-per-site"
-        publishDir = [
-            enabled: false
-        ]
+        publishDir = [ enabled: false ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:CONCATENATE' {
@@ -82,15 +81,11 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:GUNZIP' {
-        publishDir = [
-            enabled: false
-        ]
+        publishDir = [ enabled: false ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:ADD_COLUMNS' {
         ext.prefix = { "${meta.id}_D${meta.depth}_P${meta.panel}_SNP" }
-        publishDir = [
-            enabled: false
-        ]
+        publishDir = [ enabled: false ]
     }
 }
