--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -16,7 +16,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/validation/truth" },
             mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: false
         ]
     }
