add stitch tool

--- a/nextflow.config
+++ b/nextflow.config
@@ -193,10 +193,11 @@ profiles {
         executor.cpus          = 4
         executor.memory        = 8.GB
     }
-    test       { includeConfig 'conf/test.config'      }
-    test_full  { includeConfig 'conf/test_full.config' }
-    test_sim   { includeConfig 'conf/test_sim.config'  }
-    test_quilt { includeConfig 'conf/test_quilt.config'  }
+    test        { includeConfig 'conf/test.config'          }
+    test_full   { includeConfig 'conf/test_full.config'     }
+    test_sim    { includeConfig 'conf/test_sim.config'      }
+    test_quilt  { includeConfig 'conf/test_quilt.config'    }
+    test_stitch { includeConfig 'conf/test_stitch.config'   }
 }
 
 // Set default registry for Apptainer, Docker, Podman and Singularity independent of -profile
