add stitch parameters

--- a/nextflow.config
+++ b/nextflow.config
@@ -51,6 +51,10 @@ params {
     ngen                       = 100
     buffer                     = 10000
 
+    // STITCH
+    k_val                      = 2
+    seed                       = 1
+
     // Boilerplate options
     outdir                      = null
     publish_dir_mode            = 'copy'
@@ -290,6 +294,7 @@ includeConfig 'conf/steps/panel_prep.config'
 includeConfig 'conf/steps/imputation.config'
 includeConfig 'conf/steps/imputation_glimpse1.config'
 includeConfig 'conf/steps/imputation_quilt.config'
+includeConfig 'conf/steps/imputation_stitch.config'
 
 // validation step
 includeConfig 'conf/steps/validation.config'
