re-add panel because it breaks otherwise

--- a/conf/test_stitch.config
+++ b/conf/test_stitch.config
@@ -26,6 +26,7 @@ params {
     // Genome references
     fasta  = "https://raw.githubusercontent.com/nf-core/test-datasets/phaseimpute/data/reference_genome/21_22/hs38DH.chr21_22.fa"
     phased = true
+    panel  = "${projectDir}/tests/csv/panel.csv"
 
     // Impute parameters
     step   = "impute"
