--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -115,3 +115,93 @@ process {
         ext.args     = "--tbi"
     }
 }
+
+process {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHR_CHECK:.*' {
+        publishDir = [
+            path: { "${params.outdir}/prep_panel/" },
+            mode: params.publish_dir_mode,
+            enabled: false
+        ]
+    }
+
+        withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_NORM' {
+        ext.args      = '-m +any --no-version --output-type z'
+        ext.prefix    = { "${meta.id}_${meta.chr}_multiallelic" }
+        cpus          = 2
+        memory        = 400.MB
+        maxRetries    = 2
+    }
+
+        withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_INDEX' {
+        ext.args     = "--tbi"
+        publishDir = [enabled: false]
+    }
+
+        withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_VIEW' {
+        ext.args      = '-v snps -Oz'
+        ext.prefix    = { "${meta.id}_${meta.chr}_biallelic" }
+        cpus          = 2
+        memory        = 400.MB
+        maxRetries    = 2
+    }
+
+        withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_INDEX_2' {
+        ext.args      = '--tbi'
+        cpus          = 2
+        memory        = 400.MB
+        maxRetries    = 2
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:VIEW_VCF_SNPS' {
+        ext.args = [
+            "-m 2",
+            "-M 2",
+            "-v snps",
+            "--output-type z",
+            "--no-version"
+        ].join(' ')
+        ext.prefix = { "${meta.id}_SNPS" }
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:VIEW_VCF_SITES' {
+        ext.args = [
+            "-G",
+            "-m 2",
+            "-M 2",
+            "-v snps",
+            "--output-type z",
+            "--no-version"
+        ].join(' ')
+        ext.prefix = { "${meta.id}_C${meta.chr}_SITES" }
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:BCFTOOLS_QUERY' {
+        ext.args = [
+            "-f'%CHROM\t%POS\t%REF,%ALT\\n'",
+        ].join(' ')
+        ext.prefix = { "${meta.id}_glimpse_SITES_TSV" }
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:TABIX_TABIX' {
+        ext.args = [
+            "-s1",
+            "-b2",
+            "-e2"
+        ].join(' ')
+        ext.prefix = { "${meta.id}_glimpse_SITES_TSV" }
+    }
+
+    // Phasing
+        withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_PHASE_PANEL:VCF_PHASE_SHAPEIT5:BEDTOOLS_MAKEWINDOWS' {
+        ext.args = [
+            '-w 60000',
+            '-s 40000'
+        ].join(' ')
+        ext.prefix = { "${meta.id}_chunks" }
+        publishDir = [
+            enabled: false
+        ]
+    }
+
+}
