change tsv and posfile config to panelprep

--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -204,4 +204,20 @@ process {
         ]
     }
 
+    // TSV
+
+        withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:BCFTOOLS_QUERY_STITCH' {
+        ext.args = [
+            "-f'%CHROM\t%POS\t%REF\t%ALT\\n'",
+        ].join(' ')
+        ext.prefix = { "${meta.id}_${meta.chr}_posfile_stitch" }
+    }
+
+        withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:GAWK_STITCH' {
+        ext.args      = "'{ key = \$1 FS \$2 } !seen[key]++'"
+        ext.prefix    = { "${meta.id}_${meta.chr}_posfile" }
+        ext.suffix = ".txt"
+    }
+
+
 }
