--- a/nextflow.config
+++ b/nextflow.config
@@ -54,6 +54,7 @@ params {
     // STITCH
     k_val                      = 2
     seed                       = 1
+    posfile                    = null
 
     // Boilerplate options
     outdir                      = null
